Added realm crud functionalities
