# internal/model/realm.go
@@ -3,7 +3,7 @@ package model
 // Realm represents the static configuration of a realm, typically loaded from YAML files.
 // It includes the realm + tenant identifiers and a multiple FlowWithRoute (for now).
 type Realm struct {
-	Realm     string // e.g. "customers"
-	RealmName string // e.g. "Our Customers"
-	Tenant    string // e.g. "acme"
+	Realm     string `json:"realm"`      // e.g. "customers"
+	RealmName string `json:"realm_name"` // e.g. "Our Customers"
+	Tenant    string `json:"tenant"`     // e.g. "acme"
 }
